[package]
name = "richard-test"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "test-package"
homepage = "example.com"
documentation = "example.com"
repository = "example.com"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
